--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevLinks xpto</title>
+    <title>DevLinks</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -26,5 +26,3 @@
     
   </body>
 </html>
-
-
