--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="profile">
         <img src="./assets/avatar.png" alt=""
         />
-        <p>@Yuric4mpos</p>
+        <p>@yuric4mpos</p>
 
       </div>
 
