--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
         <p>@yuric4mpos</p>
 
       </div>
+      <ul>
+        <li>
+          <a href="#">Inscrever-se no NLW</a>
+        </li>
+
+        <li>
+          <a href="#">Baixar meu e-book</a>
+        </li>
+
+        <li>
+          <a href="#">Ver meu portifolio</a>
+        </li>
+
+        <li>
+          <a href="#">Conheça o explorer</a>
+        </li>
+      </ul>
+
 
     </div>
     </div>
